--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,11 @@ name = "pypi"
 django = "==3.1.5"
 channels = "==3.0.3"
 channels-redis = "==3.2.0"
+requests = "==2.25.1"
 
 [dev-packages]
 selenium = "*"
+responses = "==0.12.1"
 
 [requires]
 python_version = "3.9"
